name: adventofcode2017
version: 1.0
build-type: Simple

-- cabal: The field 'build-depends: adventofcode' refers to a library which is
-- defined within the same package. To use this feature the package must specify
-- at least 'cabal-version: >= 1.8'.
cabal-version: >= 1.8

library
  hs-source-dirs:  lib
  exposed-modules: AdventOfCode
  ghc-options:     -Wall
  build-depends:   base

library aocsplit
  hs-source-dirs:  lib
  exposed-modules: AdventOfCode.Split
  ghc-options:     -Wall
  build-depends:   base

executable 07_balancing_discs
  build-depends:  base, adventofcode2017, aocsplit, containers
  hs-source-dirs: bin
  main-is:        07_balancing_discs.hs
  ghc-options:    -Wall

executable 09_stream_of_garbage
  build-depends:  base, adventofcode2017
  hs-source-dirs: bin
  main-is:        09_stream_of_garbage.hs
  ghc-options:    -Wall

executable 12_connected_groups
  -- nubInt added in containers 0.6.0.1
  build-depends:  base, adventofcode2017, array, containers >= 0.6.0.1
  hs-source-dirs: bin
  main-is:        12_connected_groups.hs
  ghc-options:    -Wall
