cabal-version: 2.2
-- cabal 2.2 for common stanzas

name: adventofcode2017
version: 1.0
build-type: Simple

common flags
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-deriving-strategies
    -- in GHC 9.0.1, enabling -Wmissing-exported-signatures disabled stricter -Wmissing-signatures
    -- this was fixed in GHC 9.2.1, so it's safe to keep this now.
    -- (Not mentioned in release notes, but git tag --contains e1f133bf5ee30f25a94b4f3bf4d26d1a9381f0d9)
    ---Wno-missing-exported-signatures
    -Wno-missing-import-lists
    -Wno-missing-kind-signatures
    -Wno-missing-local-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-monomorphism-restriction
    -Wno-prepositive-qualified-module
    -Wno-safe
    -Wno-unsafe

common bin
  hs-source-dirs: bin

library
  import: flags
  hs-source-dirs:  lib
  exposed-modules: AdventOfCode
  build-depends:   base

library aocknothash
  import: flags
  hs-source-dirs:  lib
  exposed-modules: AdventOfCode.KnotHash
  build-depends:   base, containers

library aocsplit
  import: flags
  hs-source-dirs:  lib
  exposed-modules: AdventOfCode.Split
  build-depends:   base

library aocunionfind
  import: flags
  hs-source-dirs:  lib
  exposed-modules: AdventOfCode.UnionFind
  build-depends:   base, array

executable 01_equal_to_next
  import: bin, flags
  build-depends: base, adventofcode2017
  main-is:       01_equal_to_next.hs

executable 02_spreadsheet
  import: bin, flags
  build-depends: base, adventofcode2017
  main-is:       02_spreadsheet.hs

executable 03_spiral_matrix
  import: bin, flags
  build-depends: base, containers
  main-is:       03_spiral_matrix.hs

executable 04_passphrases
  import: bin, flags
  build-depends: base, adventofcode2017, containers
  main-is:       04_passphrases.hs

executable 05_cpu_jump
  import: bin, flags
  -- Only actually uses array and not containers,
  -- but leaving the latter in to easily compare perf for this problem.
  build-depends: base, adventofcode2017, array, containers
  main-is:       05_cpu_jump.hs

executable 06_mancala
  import: bin, flags
  build-depends: base, adventofcode2017, containers
  main-is:       06_mancala.hs

executable 07_balancing_discs
  import: bin, flags
  build-depends: base, adventofcode2017, aocsplit, containers
  main-is:       07_balancing_discs.hs

executable 08_inc_dec_if
  import: bin, flags
  build-depends: base, adventofcode2017, containers
  main-is:       08_inc_dec_if.hs

executable 09_stream_of_garbage
  import: bin, flags
  build-depends: base, adventofcode2017
  main-is:       09_stream_of_garbage.hs

executable 10_knot_hash
  import: bin, flags
  build-depends: base, adventofcode2017, aocknothash, aocsplit
  main-is:       10_knot_hash.hs

executable 11_hex_grid
  import: bin, flags
  build-depends: base, adventofcode2017, aocsplit
  main-is:       11_hex_grid.hs

executable 12_connected_groups
  import: bin, flags
  build-depends: base, adventofcode2017, aocunionfind
  main-is:       12_connected_groups.hs

executable 13_packet_scanners
  import: bin, flags
  build-depends: base, adventofcode2017
  main-is:       13_packet_scanners.hs

executable 14_disk_defrag
  import: bin, flags
  build-depends: base, aocknothash, aocunionfind, containers, directory
  main-is:       14_disk_defrag.hs

executable 15_dueling_generators
  import: bin, flags
  build-depends: base
  main-is:       15_dueling_generators.hs

executable 16_permutation_promenade
  import: bin, flags
  build-depends: base, adventofcode2017, aocsplit, containers
  main-is:       16_permutation_promenade.hs

executable 17_spinlock
  import: bin, flags
  build-depends: base, containers
  main-is:       17_spinlock.hs

executable 18_duet
  import: bin, flags
  build-depends: base, adventofcode2017, array, containers
  main-is:       18_duet.hs

executable 19_routing_diagram
  import: bin, flags
  -- !? added in array 0.5.6.0
  build-depends: base, adventofcode2017, array >= 0.5.6.0
  main-is:       19_routing_diagram.hs

executable 20_particle_swarm
  import: bin, flags
  build-depends: base, adventofcode2017, aocsplit
  main-is:       20_particle_swarm.hs
